# MBudget

./: Cargo.toml  example_config.toml  readme.md  theory-english.md  theory.md
docker/: Dockerfile  build.sh  config.toml
sql/: 01_create_db_mbudget.sql  02_create_content.sql  test.sql
src/: calculate.rs  calculations.rs  data_access.rs  date_utils.rs  main.rs  model.rs
static/css/: theme.css
static/js/: analytics.js  script.js
templates/: analytics.hbs  index.hbs
